@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmCommon.h,v $
   Language:  C++
-  Date:      $Date: 2005/01/21 20:49:37 $
-  Version:   $Revision: 1.54 $
+  Date:      $Date: 2005/01/22 12:39:12 $
+  Version:   $Revision: 1.55 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -54,7 +54,7 @@ typedef  signed char    int8_t;
 typedef  unsigned char    uint8_t;
 typedef  unsigned short   uint16_t;
 typedef  unsigned int     uint32_t;
-typedef  unsigned __int64 uint64_t;
+#define uint64_t unsigned __int64    //  problems with swig when using a typedef
 #define UINT32_MAX    (4294967295U)
 #endif
 
